jenkins/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    app.kubernetes.io/name: jenkins
    pod-security.kubernetes.io/enforce: baseline
